--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,15 @@
     border: 1px solid black;
     border-radius: 8px;
     }
+#line-graph{
+    width: 500px;
+    position: absolute;
+    height: 600px;
+    margin:0;
+    padding:0;
+    border: 1px solid black;
+    border-radius: 8px;
+}
     .legend {
         line-height: 18px;
         color: #555;
