--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
     position: absolute;
     height: 600px;
     margin:0;
-    padding:0; 
+    padding:0;
     border: 1px solid black;
     border-radius: 8px;
     }
@@ -16,6 +16,10 @@
     border: 1px solid black;
     border-radius: 8px;
 }
+.line {
+    fill: none;
+    stroke: black;
+}
     .legend {
         line-height: 18px;
         color: #555;
@@ -27,15 +31,15 @@
         margin-right: 8px;
         opacity: 0.7;
     }
-    div.tooltip {	
-        position: absolute;			
-        text-align: center;			
-        width: 60px;					
-        height: 28px;					
-        padding: 2px;				
-        font: 12px sans-serif;		
-        background: lightsteelblue;	
-        border: 0px;		
-        border-radius: 8px;			
-        pointer-events: none;			
+    div.tooltip {
+        position: absolute;
+        text-align: center;
+        width: 60px;
+        height: 28px;
+        padding: 2px;
+        font: 12px sans-serif;
+        background: lightsteelblue;
+        border: 0px;
+        border-radius: 8px;
+        pointer-events: none;
     }
